# qtomography-

./: .gitignore  GITHUB_SETUP.md  LICENSE  README.md  build_gui.py  build_gui.spec  mub.md  pyproject.toml  requirements.txt  run_gui.py  wls-1.py  算法.md
docs/: README.md  待修复问题.md
docs/archive/: density-initial-issues-analysis.md  density-step2-issues-and-fixes.md  density-temp-design-notes-2024.md  matlab-gui-feature-comparison-v1.0-deprecated.md  project-status-corrections-2025-10-07.md
docs/gui/: GUI配置保存机制实现说明.md  README.md  design_v2.md  disign.md  gui_mvp_plan.md  新计划.md  配置机制解耦分析与改动指南.md
docs/guides/: README.md  development-guide.md  gitignore-guide.md  installation-guide.md
docs/implemented/: ADD_MLE_RECONSTRUCTION_GUIDE.md  ARCHITECTURE_REFINEMENT_ANALYSIS.md  DOCUMENT_STATUS_REVIEW.md  cli-usage-guide.md  configuration-feature-testing-report.md  density-module-overview.md  linear-reconstruction-guide.md  matlab-gui-feature-comparison-v2.md  mle-reconstruction-guide.md  project-status-2025-10-07.md  repository-comprehensive-analysis-2025-10-07.md  stage2-completion-summary.md  system-completeness-analysis-2025-10-07.md  visualization-3d-enhancement.md  图像保存功能的架构排布.md
docs/meta/: ARCHIVE_VS_IMPLEMENTED_ANALYSIS.md  DOCS_CLEANUP_2025_11.md  DOCS_DIRECTORY_STRUCTURE_EVALUATION.md  DOCS_RESTRUCTURE_PLAN.md  DOCS_STRUCTURE_ANALYSIS.md  DOCS_STRUCTURE_FINAL.md  DOCUMENT_CLEANUP_SUMMARY.md  DOCUMENT_ORGANIZATION_SUMMARY.md  DOCUMENT_REORGANIZATION_2025_11.md  DOCUMENT_REORGANIZATION_SUMMARY.md  PROJECT_STRUCTURE_CLEANUP.md
docs/roadmap/: 2025-09-24-roadmap-status.md  MUB改进路线.md  NEXT_STEPS_RECOMMENDATIONS.md  PRIORITY_PLAN_ANALYSIS.md  STAGE3_PLAN_UPDATE_SUMMARY.md  app-controller-cli-plan.md  architecture-refinement-plan-2025-10-07.md  base-reconstructor-proposal.md  bell-analysis-design.md  lightweight-reconstruction-utilities.md  linear-reconstructor-design.md  master-plan.md  mle-reconstructor-design.md  projector-set-design.md  result-visualization-design.md  stage3-metrics-expansion-plan.md  stage3-plan-review.md  stage4-architecture-consolidation-plan.md  名称修改.md
docs/teach/: 1.GUI数据流.md  1.GUI数据流图表.md  1.Python程序架构分析.md  1.代码调用流程图.md  1.全息图生成系统技术详解.md  1.当前项目水平.md  1.数据流示意图.md  1.缓存策略完整指南.md  1.面试准备-三种算法.md  2.density图示.md  3d绘图区别.md  DensityMatrix重构使用指南.md  __init__文件详解.md  bell分析详解.md  cli详解.md  controller详解.md  density公式教学.md  density的结构概述.md  linear公式教学.md  linear的结构概述.md  mle公式教学.md  mle的结构概述.md  os_interview_answers.md  os_interview_answers_detailed.md  os_interview_checklist.md  os_review_quick_sheet.md  projectors_结构分析与集成.md  projectors_缓存机制详解.md  projector公式教学.md  projector的结构概述.md  上下文管理.md  代码调用流程图.md  似然函数.md  后续重构的投影基.md  后续重构的策略.md  启动计算的流程.md  多进程批处理技术详解.md  当前的重构策略问题.md  当前重构策略10.9.md  总体重构策略概述.md  (+10 more)
docs/visualization/: MATLAB与Python_3D可视化对比分析.md  README.md  plot_density_matrix_python_分析.md  图像预览交互功能实现详解.md  图像预览显示技术分析.md  密度矩阵可视化方法总结.md
packaging/: BUILD_TEST_RESULT.md  CHECKLIST.md  DATA_FORMAT_GUIDE.md  DATA_SELECTION_DESIGN.md  GUI_PACKAGING_GUIDE.md  README.md  README.txt  TUTORIAL.md  USER_GUIDE.md  参数调节教学.md
qtomography/: __init__.py
qtomography/analysis/: __init__.py  bell.py  comparison.py  metrics.py
qtomography/app/: __init__.py  config_io.py  controller.py  exceptions.py
qtomography/cli/: __init__.py  main.py
qtomography/domain/: __init__.py  density.py  density_备份.py  (+4 more)
tests/: README.md  conftest.py  test_spectral_domain.py  test_spectral_visualizer.py
(+98 files in other folders)
